--- a/styled/front/public/index.html
+++ b/styled/front/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link href="index.css" rel="stylesheet" type="text/css"> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>React App</title>
+    <title>Calendar App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
